layout and a component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <app-header></app-header>
+        <h4 class="text-center">Recipes</h4>
     </div>
   </div>
   <div class="row">
